# dynamic_segmentation

./: README.md
Dynamic_segmentation/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox
Dynamic_segmentation/.kdev4/: project_points.kdev4
Dynamic_segmentation/include/: Utilities.h~  image_utilities.h  image_utilities.h~
Dynamic_segmentation/src/: Lu.cpp  Utilities.cpp  image_utilities.cpp~  main.cpp  main.cpp~
Velodyne_sync_image/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
export_clouds/: CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
export_images/: CMakeLists.txt  CMakeLists.txt~
laser_calib/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
laser_calib_manual/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
optical_flow_cloud/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
optical_flow_kitty/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
optical_flow_range/: CMakeLists.txt~  mainpage.dox  manifest.xml
optical_flow_range_non_sync/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
optical_flow_sync/: CMakeLists.txt  mainpage.dox  manifest.xml
planar_range_image/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
planar_range_image/.kdev4/: planar_range_image.kdev4
planar_range_image/include/: image_utilities.h~
planar_range_image/src/: image_utilities.cpp~  main.cpp  main.cpp~
velodyne_and_camera/: Velodyne_camera.launch  Velodyne_camera.launch~
velodyne_process_sync_topics/: CMakeLists.txt  manifest.xml
velodyne_read_topic/: CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
(+82 files in other folders)
